samples/_failures_safe/1761363144_ab8f85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ff7d9cf.c: In function ‘main’:
./samples/SAFE/__tmp_2ff7d9cf.c:159:17: error: expected declaration or statement at end of input
  159 |                 print_matrix(&result);
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_2ff7d9cf.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ff7d9cf.c:159:17: error: expected declaration or statement at end of input
